# EiCNAM

./: CMakeLists.txt  README.md  cva_calculation.py
AWS/: check_ec2_instance.py  check_ec2_quota.py  create_ec2_instance.py  create_ec2_key_pair.py  create_ec2_vpc.py  delete_all_vpcs.py  delete_key_pair.py  delete_stopped_instances.py  find_latest_g5_instances.py  list_instances.py  list_key_pairs.py  list_security_groups.py  list_subnets.py  list_vpcs.py  stop_all_instances.py  x_connect_to_instance.txt
CompFinance/: AAD.h  AADExpr.h  AADNumber.h  AADTape.h  CMakeLists.txt  ConcurrentQueue.h  Store.cpp  ThreadPool.h  blocklist.h  main.h  matrix.h  mcBase.h  mrg32k3a.h  store.h  toyCode.h
CompFinanceTests/: AADriskPutBarrierTest.cpp  AADriskPutEuropeanTest.cpp  AADriskTest.cpp  BlackScholesTest.cpp  CMakeLists.txt  DupireBarrierMcRisksTest.cpp  DupireCalibrationTest.cpp  DupireMonteCarlo.cpp  DupireMonteCarloFDM.cpp  TorchCppExampleTest.cpp  aadTape.cpp  memoryPool.cpp  mertonTest.cpp  optimizedAADTape.cpp  toyCodeChp15section2.cpp  toyCodeChp9section5.cpp  toyCodeChp9sections2to4.cpp
CppUnitTest/: CMakeLists.txt  Failure.cpp  Failure.h  Test.cpp  Test.h  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  TestResult.h
OptionPricingFramework/: CMakeLists.txt
OptionPricingFramework/include/Methods/: BS.hpp  BSWrapper.hpp  BinomialTree.hpp  BlackScholesClosedForm.hpp  MonteCarlo.hpp
OptionPricingFramework/include/Processes/: LogNormalProcess.hpp  NormalProcess.hpp  StochasticProcess.hpp
OptionPricingFramework/include/methods/: LongstaffSchwartz.hpp  MonteCarlo.hpp
OptionPricingFramework/include/processes/: CIRPlusPlusProcess.hpp  GeometricBrownianMotion.hpp  IntensityProcess.hpp  LogNormalProcess.hpp  StochasticProcess.hpp
OptionPricingFramework/include/products/: EuropeanOption.hpp
OptionPricingFramework/src/Methods/: BS.cpp  BSWrapper.cpp  BinomialTree.cpp  BlackScholesClosedForm.cpp  LongstaffSchwartz.cpp  MonteCarlo.cpp
OptionPricingFramework/src/Processes/: CIRPlusPlusProcess.cpp  LogNormalProcess.cpp  NormalProcess.cpp
OptionPricingFramework/src/methods/: BinomialTree.cpp  LongstaffSchwartz.cpp  MonteCarlo.cpp
OptionPricingFramework/src/processes/: IntensityProcess.cpp  LogNormalProcess.cpp  StochasticProcess.cpp
OptionPricingFramework/tests/: design.txt  singleTest.cpp  testBS.cpp  testBSGradients.cpp  testBSWrapper.hpp  testBinomialTree.cpp  testBlackScholesClosedForm.cpp  testCheckGPUs.cpp  testEigenCppExample.cpp  testGeometricBrownianMotion.cpp  testLinAL.cpp  testLogNormalProcess.cpp  testLongstaffSchwartz.cpp  testMonteCarloEuropeanOption.cpp  testTorchCppExample.cpp  test_european_option_pricing.cpp
PyTorchAAD/Engine/: simulator.py  stochastic_process.py
PyTorchAAD/Instruments/: european_option.py
PyTorchAAD/Methods/: base.py  binomial_tree.py  finite_difference.py  longstaff_schwartz.py  longstaff_schwartz_best_of_two_assets.py  monte_carlo.py  monte_carlo_pricing.py
PyTorchAAD/Tests/: test_bermudan_best_of_two_assets_pricing.py  test_binomial_tree_cva.py  test_binomial_tree_pricing.py  test_european_option_cva.py  test_european_option_pricing.py  test_extended_binomial_tree_greeks.py  test_extended_binomial_tree_pricing.py  test_longstaff_schwartz_bermudan_greeks.py  test_monte_carlo.py  test_simulations.py
TorchAAD/Engine/: pricing_engine.py  stochastic_process.py
TorchAAD/Instruments/: base.py  bermudan_option.py
TorchAAD/Methods/: binomial_tree.py  extended_binomial_tree.py  longstaff_schwartz.py  longstaff_schwartz_best_of_two_assets.py  monte_carlo.py
TorchAAD/Models/: black_scholes.py  dynamics.py
TorchAAD/Tests/: myTest.py  test_bermudan_best_of_two_assets_greeks.py  test_bermudan_best_of_two_assets_pricing.py  test_bermudan_option.py  test_binomial_tree.py  test_binomial_tree_cva.py  test_binomial_tree_greeks.py  test_binomial_tree_pricing.py  test_european_option.py  test_european_option_cir_cva.py  test_european_option_cir_plus_plus_cva.py  test_european_option_cva.py  test_european_option_cva_closed_form.py  test_european_option_greeks.py  test_european_option_pricing.py  test_longstaff_schwartz_bermudan_cva.py  test_longstaff_schwartz_bermudan_pricing.py  test_longstaff_schwartz_greeks.py  test_longstaff_schwartz_pricing.py  test_monte_carlo_pricing.py  test_pricing_engine.py  test_simulations.py  test_simulations_plot.ipynb
Tutorials/: adjoint_book01.cpp  basicInstrumentation.cpp  basicInstrumentationExpr.cpp  basket_option_closed_form.py  bermudan_put_cva.py  bestof2assets_longstaff_schwartz.py  binomial_fdm_greeks.ipynb  binomial_tree.py  binomial_tree_sens.py  black_scholes_tangent.cpp  cir_plus_plus_aad.ipynb  computational_graphs.ipynb  european_call_cva.ipynb  european_option.py  g2pp_cirpp.py  longstaff_schwartz.py  mc_basket_option.py  monteCarlo_greeks.ipynb  monte_carlo_bermudan_best_of_two_assets_option.py  monte_carlo_bermudan_option.py  ql_bermudan_best_of_two_assets_option.py  ql_best_of_two_assets_option.py  ql_binomial_tree_bermudan_option.py  ql_binomial_tree_best_of_2_assets.py  tangent_book01.cpp
Tutorials/Archive/: GBM_CVT.py  factorial.cpp  incrementable.cpp
Tutorials/Notebboks/: mc_dupire.ipynb
Tutorials/Notebooks/: adjoint_mode_graph.ipynb  barrier_dupire_mc.ipynb  barrier_option_dupire_sensitivities.ipynb  barrier_option_dupire_sensitivities_updated.ipynb  basket_option.ipynb  computation_graph_vizualization.ipynb  computation_graphs.ipynb  computational_graphs.ipynb  extended_binomial_tree.ipynb  fd_barrier_option_dupire_sensitivities.ipynb  longstaff_schwartz.least_square_mc.ipynb  longstaff_schwartz_starter.ipynb  mc_barrier_option.ipynb  mc_barrier_option_dupire_sensitivities.ipynb  mc_barrier_option_sensivities.ipynb  mc_dupire.ipynb  myCudaTutorial.ipynb  pytorch_sensitivities.ipynb  sensitivities_in_local_volatility_surfaces.ipynb  tensorflow_sensitivities.ipynb
Tutorials/src/: AdStarter.cpp  AdStarter.h  BlackFormula.cpp  BlackFormula.h  BlackFormulaTest.cpp  SabrPriceFormula.cpp  SabrVolatilityFormula.cpp  SabrVolatilityFormula.h  SabrVolatilityFormulaTest.cpp  Utils.cpp  (+6 more)
(+3 files in other folders)
